--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-8">
                 <h2>About Me</h2>
-                <p>Hello! I'm [Your Name], a passionate data scientist with a strong background in machine learning,
+                <p>Hello! I'm Francisca, a passionate data scientist with a strong background in machine learning,
                     deep learning, and data analysis. I have a degree in [Your Degree] from [Your University]
                     and over [X] years of experience in the industry.</p>
                 <p>My expertise lies in developing scalable machine learning models, creating insightful
@@ -71,7 +71,7 @@
 
                     </div>
                     <div class="card-footer">
-                        <a href="https://huggingface.co/spaces/vince1313/TestChatBot" class="btn btn-success">View on HuggingFace</a>
+                        <a href="https://huggingface.co/spaces/vince1313/TestChatBot" class="btn btn-warning">View on HuggingFace</a>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
 
                     </div>
                     <div class="card-footer">
-                        <a href="https://github.com/vince13/nomad-force-portfolio" class="btn btn-danger text-white">View on GitHub</a>
+                        <a href="https://github.com/vince13/nomad-force-portfolio" class="btn btn-warning">View on GitHub</a>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                         <p><strong>Participation:</strong> Designer</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://github.com/yourusername/project3" class="btn btn-primary">View on GitHub</a>
+                        <a href="https://github.com/Cisca994/My-assignments-on-Regression" class="btn btn-warning">View on GitHub</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                         <p><strong>Participation:</strong> Tester</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://github.com/yourusername/project4" class="btn btn-primary">View on GitHub</a>
+                        <a href="https://github.com/yourusername/project4" class="btn btn-warning">View on GitHub</a>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                         <p><strong>Participation:</strong> Tester</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://github.com/yourusername/project4" class="btn btn-primary">View on GitHub</a>
+                        <a href="https://github.com/Cisca994/Class-work" class="btn btn-warning">View on GitHub</a>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                         <p><strong>Participation:</strong> Tester</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://github.com/yourusername/project4" class="btn btn-primary">View on GitHub</a>
+                        <a href="https://github.com/yourusername/project4" class="btn btn-warning">View on GitHub</a>
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                 <div class="col-md-4 mb-3">
                     <h5>Contact Me</h5>
                     <ul class="list-unstyled">
-                        <li>Email: <a href="mailto:vincent@techmaloo.com" class="text-white">vincent@techmaloo.com</a></li>
+                        <li>Email: <a href="mailto:danielfrancisca173@gmail.com" class="text-white">danielfrancisca173@gmail.com</a></li>
                         <li>Phone: <a href="tel:+1234567890" class="text-white">+1234567890</a></li>
                         <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" class="text-white">yourprofile</a></li>
                     </ul>
@@ -208,16 +208,16 @@
                 <div class="col-md-4 mb-3">
                     <h5>Follow Me</h5>
                     <ul class="list-unstyled">
-                        <li><a href="https://github.com/yourusername" class="text-white">GitHub</a></li>
+                        <li><a href="https://github.com/Cisca994" class="text-white">GitHub</a></li>
                         <li><a href="https://twitter.com/yourusername" class="text-white">Twitter</a></li>
-                        <li><a href="https://www.linkedin.com/in/yourprofile" class="text-white">LinkedIn</a></li>
+                        <li><a href="https://www.linkedin.com/in/francisca-daniel-455760314/" class="text-white">LinkedIn</a></li>
                         <li><a href="https://www.kaggle.com/yourusername" class="text-white">Kaggle</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2024 Your Name. All Rights Reserved.</p>
+                    <p class="mb-0">© 2024 Francisca Scholastica Daniel. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
